# tailbin-cache

./: .gitignore  AGENTS.md  PATCH_NOTES_v1_2.md  PATCH_NOTES_v1_3.md  PATCH_NOTES_v4_OPTIMIZED.md  PRODUCTION_STATUS.md  README.md  hello.txt  pyproject.toml
docs/: ACCURACY_AND_KMAX.md  IMPORTED_PACKAGE_README.md  ITERATION_HANDOFF_TEMPLATE.md  METHOD.md  O2_GPU_README.md  O2_RESOURCE_CALIBRATION.md  O2_RUNBOOK.md  OPERATIONS.md  PRODUCTION_TARGET_GRID.md  WORKFLOW.md
examples/: full100k_v1_k50000.yaml  gpu_backend_audit.py  kmax2000_cpu_smoke.yaml  kmax20_o2_gpu_probe.yaml  local34_diag_v1_k10000_1k.yaml  o2_production_pilot.yaml  o2_resource_calibration.yaml  production_template.yaml  smoke.yaml
scripts/: o2_cpu_array.sbatch  o2_gpu_probe.sbatch
scripts/o2/: README.md  check_python_env.sh  collect_representative_calibration.sbatch  collect_resource_calibration.sbatch  collect_results.sbatch  cpu_smoke.sbatch  discover_cuda.sh  gpu_audit.sbatch  representative_build.sbatch  representative_calibration.sbatch  resource_calibration.sbatch  setup_python_env.sbatch  submit_production_pilot.sh  submit_representative_calibration.sh  submit_resource_calibration.sh  submit_setup_env.sh  submit_smoke_audit.sh  summarize_representative_calibration.py  summarize_resource_calibration.py
src/readsampled_cdf/: __init__.py  (+5 more)
tests/: test_gpu_backend.py  test_grid_parser_target_configs.py  test_production_cli.py  test_production_grid.py  test_production_hdf5_smoke.py  test_representative_progress_backend.py  test_representative_selector.py  test_stable_fallback_edge.py
(+18 files in other folders)
